deploy-k8s-resources/kong_helm/ai-benchmark-suite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-benchmark-static-chat
  namespace: upstream
  annotations:
    konghq.com/plugins: ai-benchmark-static-chat
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - backend:
              service:
                name: static-openai-mock
                port:
                  number: 8080
            path: /bench/static/chat
            pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-benchmark-token-chat-openai
  namespace: upstream
  annotations:
    konghq.com/plugins: ai-benchmark-token-chat-openai
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - backend:
              service:
                name: fake-provider
                port:
                  number: 8080
            path: /bench/token/chat/openai
            pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-benchmark-token-stream-openai
  namespace: upstream
  annotations:
    konghq.com/plugins: ai-benchmark-token-stream-openai
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - backend:
              service:
                name: fake-provider
                port:
                  number: 8080
            path: /bench/token/stream/openai
            pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-benchmark-token-stream-gemini
  namespace: upstream
  annotations:
    konghq.com/plugins: ai-benchmark-token-stream-gemini
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - backend:
              service:
                name: fake-provider
                port:
                  number: 8080
            path: /bench/token/stream/gemini/models/mock-gemini-2.5-flash:streamGenerateContent
            pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-benchmark-token-embeddings-openai
  namespace: upstream
  annotations:
    konghq.com/plugins: ai-benchmark-token-embeddings-openai
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - backend:
              service:
                name: fake-provider
                port:
                  number: 8080
            path: /bench/token/embeddings/openai
            pathType: ImplementationSpecific
