deploy-k8s-resources/kong_helm/ai-proxy-advanced-chat-baseline.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-chat-baseline
  namespace: upstream
  annotations:
    konghq.com/plugins: ai-proxy-advanced-chat-baseline
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - backend:
              service:
                name: ai-openai-mock
                port:
                  number: 8080
            path: /ai-chat
            pathType: ImplementationSpecific
