deploy-k8s-resources/kong_helm/ai-routing-benchmark.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-benchmark-roundrobin-2
  namespace: upstream
  annotations:
    konghq.com/plugins: ai-benchmark-roundrobin-2
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - backend:
              service:
                name: fake-provider
                port:
                  number: 8080
            path: /bench/routing/roundrobin/2
            pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-benchmark-roundrobin-10
  namespace: upstream
  annotations:
    konghq.com/plugins: ai-benchmark-roundrobin-10
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - backend:
              service:
                name: fake-provider
                port:
                  number: 8080
            path: /bench/routing/roundrobin/10
            pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-benchmark-ewma
  namespace: upstream
  annotations:
    konghq.com/plugins: ai-benchmark-ewma
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - backend:
              service:
                name: fake-provider
                port:
                  number: 8080
            path: /bench/routing/ewma
            pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-benchmark-failover
  namespace: upstream
  annotations:
    konghq.com/plugins: ai-benchmark-failover
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - backend:
              service:
                name: fake-provider
                port:
                  number: 8080
            path: /bench/routing/failover
            pathType: ImplementationSpecific
